--- a/templates/profile.html
+++ b/templates/profile.html
@@ -173,7 +173,7 @@
                             <i class="fas fa-calendar-check"></i>
                         </div>
                         <div class="stat-content">
-                            <div class="stat-value">{{ current_user.created_at.strftime('%d/%m/%Y') }}</div>
+                            <div class="stat-value">{{ safe_strftime(current_user.created_at, '%d/%m/%Y') }}</div>
                             <div class="stat-label">Member Since</div>
                         </div>
                     </div>
