--- a/templates/admin_dashboard.html
+++ b/templates/admin_dashboard.html
@@ -198,8 +198,8 @@
                                 <tr>
                                     <td>{{ user.username }}</td>
                                     <td>{{ user.email }}</td>
-                                    <td>{{ user.phone_number }}</td>
-                                    <td>{{ user.created_at.strftime('%Y-%m-%d') }}</td>
+                                    <td>{{ user.phone }}</td>
+                                    <td>{{ safe_strftime(user.created_at, '%Y-%m-%d') }}</td>
                                 </tr>
                                 {% else %}
                                 <tr>
@@ -238,13 +238,13 @@
                                     <td>{{ user.username }}</td>
                                     <td>KSH {{ "%.2f"|format(transaction.amount|abs) }}</td>
                                     <td>{{ transaction.phone_number }}</td>
-                                    <td>{{ transaction.created_at.strftime('%m/%d %H:%M') }}</td>
+                                    <td>{{ safe_strftime(transaction.created_at, '%m/%d %H:%M') }}</td>
                                     <td>
                                         <div class="btn-group btn-group-sm">
-                                            <button class="btn btn-success" onclick="approveWithdrawal({{ transaction.id }})">
+                                            <button class="btn btn-success" onclick="approveWithdrawal('{{ transaction.id }}')">
                                                 <i class="fas fa-check"></i>
                                             </button>
-                                            <button class="btn btn-danger" onclick="rejectWithdrawal({{ transaction.id }})">
+                                            <button class="btn btn-danger" onclick="rejectWithdrawal('{{ transaction.id }}')">
                                                 <i class="fas fa-times"></i>
                                             </button>
                                         </div>
@@ -289,7 +289,7 @@
                                     <td>{{ user.username }}</td>
                                     <td>KSH {{ "%.2f"|format(transaction.amount) }}</td>
                                     <td>{{ transaction.phone_number }}</td>
-                                    <td>{{ transaction.created_at.strftime('%m/%d %H:%M') }}</td>
+                                    <td>{{ safe_strftime(transaction.created_at, '%m/%d %H:%M') }}</td>
                                     <td>
                                         <span class="badge bg-warning text-dark">{{ transaction.status }}</span>
                                     </td>
@@ -344,7 +344,7 @@
                                             {{ transaction.status|title }}
                                         </span>
                                     </td>
-                                    <td>{{ transaction.created_at.strftime('%m/%d %H:%M') }}</td>
+                                    <td>{{ safe_strftime(transaction.created_at, '%m/%d %H:%M') }}</td>
                                 </tr>
                                 {% else %}
                                 <tr>
