--- a/templates/settings.html
+++ b/templates/settings.html
@@ -108,7 +108,7 @@
                             <div class="col-md-6">
                                 <div class="form-floating">
                                     <input type="tel" class="form-control" id="phone_number" name="phone_number" 
-                                           value="{{ current_user.phone_number }}" required>
+                                           value="{{ current_user.phone }}" required>
                                     <label for="phone_number"><i class="fas fa-phone me-2"></i>Phone Number</label>
                                 </div>
                             </div>
@@ -295,7 +295,7 @@
                             <span class="stat-label">
                                 <i class="fas fa-calendar me-2 text-primary"></i>Member Since
                             </span>
-                            <span class="stat-value">{{ current_user.created_at.strftime('%Y-%m-%d') }}</span>
+                            <span class="stat-value">{{ safe_strftime(current_user.created_at, '%Y-%m-%d') }}</span>
                         </div>
                         
                         <div class="stat-item d-flex justify-content-between align-items-center py-2 border-bottom">
