--- a/templates/settings.html
+++ b/templates/settings.html
@@ -74,7 +74,7 @@
                 <strong>Having issues?</strong> Try our alternative settings pages:
             </div>
             <div>
-                <a href="{{ url_for('simple_settings') }}" class="btn btn-sm btn-outline-primary me-2">
+                <a href="{{ url_for('settings') }}" class="btn btn-sm btn-outline-primary me-2">
                     <i class="fas fa-cog me-1"></i>Simple Settings
                 </a>
                 <a href="{{ url_for('debug_settings') }}" class="btn btn-sm btn-outline-secondary me-2">
