--- a/templates/settings.html
+++ b/templates/settings.html
@@ -77,7 +77,7 @@
                 <a href="{{ url_for('settings') }}" class="btn btn-sm btn-outline-primary me-2">
                     <i class="fas fa-cog me-1"></i>Simple Settings
                 </a>
-                <a href="{{ url_for('debug_settings') }}" class="btn btn-sm btn-outline-secondary me-2">
+                <a href="{{ url_for('settings') }}" class="btn btn-sm btn-outline-secondary me-2">
                     <i class="fas fa-bug me-1"></i>Debug Info
                 </a>
                 <a href="{{ url_for('health_check') }}" class="btn btn-sm btn-outline-success">
